--- a/qauzzu/css/main.css
+++ b/qauzzu/css/main.css
@@ -14,3 +14,54 @@
   color: #d847f1;
   font-weight: bold;
 }
+
+.section-developers /*Selector*/ {
+  position: relative;
+  background: url(../img/code.jpg);
+  background-size: cover;
+  background-position:center; 
+  border-top:#333 solid 5px;
+  border-bottom:#333 solid 5px;
+  /* border-left:#333 solid 5px;
+  border-right:#333 solid 5px; */
+  min-height:180px;
+}
+
+.primary-overlay{
+  background:rgba(112, 81, 176, 0.7);
+  position: absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height: 100%;
+}
+
+/* .section-developers .primary-overlay h3{
+
+  position:absolute;
+} */
+
+.section-podcast{
+  position:relative;
+  background:url(../img/circuit.jpg);
+  background-size: cover;
+  background-position: center;
+  border-top: #333 solid 5px;
+  border-bottom: #333 solid 5px;
+  min-height: 160px;
+}
+
+.section-podcast a{
+  margin-top: 30px;
+}
+
+.section-podcast.primary-overlay{
+  background:rgba(123,81,176,0.9);
+}
+
+@media(max-width: 500px){
+  .section.developers,
+  .section-podcast{
+    min-width: height 240px;
+  }
+}
